# MyApplication

./: README.md  build.gradle  local.properties  maven_build.gradle  settings.gradle
BaseRecyclerViewAdapterHelper/: build.gradle
X5WebDemo/: build.gradle
X5WebDemo/src/main/: AndroidManifest.xml
aar/com/john/m2048/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
aar/com/john/m2048/1.0/: m2048-1.0-sources.jar.md5  m2048-1.0-sources.jar.sha1  m2048-1.0.aar  m2048-1.0.aar.md5  m2048-1.0.aar.sha1  m2048-1.0.pom  m2048-1.0.pom.md5  m2048-1.0.pom.sha1
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jniLibs/armeabi/: gdb.setup
app/src/main/res/drawable/: bg_dashed.xml  bg_dialog_confirm_left.xml  bg_dialog_confirm_right.xml  bg_dialog_confirm_right_white.xml  bg_midetail_apply.xml  bg_midetail_blindlevel.xml  bg_progress.xml  bg_round_blue.xml  circle_drawable.xml  shadow.xml
db/src/main/: AndroidManifest.xml
m2048/: build.gradle
m2048/src/main/: AndroidManifest.xml
multimedia/: build.gradle  proguard-rules.pro
multimedia/src/main/: AndroidManifest.xml
ndk/: CMakeLists.txt  build.gradle
ndk/src/androidTest/java/com/john/ndk/: ExampleInstrumentedTest.java
ndk/src/main/: AndroidManifest.xml
ndk/src/main/cpp/: test-lib.cpp
ndk/src/main/cpp/tool/: stringTool.cpp
ndk/src/main/java/com/john/ndk/: NdkTest.java
ndk/src/test/java/com/john/ndk/: ExampleUnitTest.java
scriptdevelope/: build.gradle
traces.txt/: traces.txt
zhishitixi/: build.gradle
zhishitixi/src/main/: AndroidManifest.xml
(+137 files in other folders)
